--- a/Project/src/assets/SCSS/Helpers/_classes.scss
+++ b/Project/src/assets/SCSS/Helpers/_classes.scss
@@ -25,8 +25,12 @@
 }
 
 
-
-
+// h2 home 
+.HomeH2{
+  text-align: $HomeFeatureTextalign;
+  font:$HomeFeatureFont;
+  padding-bottom: $HomeFeaturePadding;
+}
 
 
 
