--- a/Project/src/assets/SCSS/Helpers/_mixin.scss
+++ b/Project/src/assets/SCSS/Helpers/_mixin.scss
@@ -3,6 +3,18 @@
     padding: $padding;
 }
 
+@mixin anchor($textDecoration,$color){
+	text-decoration: $textDecoration;
+	color:$color;
+}
+
+
+
+
+
+
+
+
 @mixin navbarStyle($transition,$color,$hovercolor,$font){
 	.nav-link{
 		transition:$transition;
