--- a/Project/src/assets/SCSS/Helpers/_variables.scss
+++ b/Project/src/assets/SCSS/Helpers/_variables.scss
@@ -5,14 +5,11 @@ $DarkColor:#86ba09;
 $SecondaryColor:#ffaf00;
 $PrimaryColor  :#000;
 $WhiteColor:white;
+$LightGrayColor:#f5f5f5;
+$DarkGrayColor:#666d79;
 
 $transition:all 1s ease-in-out;
-
-// for upper header
-$UpperHeaderFontSize :.77em;
-$UpperHeaderMargin:0;
-$UpperHeaderPadding:0;
-$UpperHeaderFontScale:1.3;
+$fonts : "Roboto Slab",'Lucida Sans Typewriter',serif;
 
 // for Logo
 $LogoImgHeight:110px;
@@ -21,41 +18,10 @@ $LogoPFont:bolder 2.5em 'Script MT', 'Franklin Gothic Medium';
 $LogoPTransition:all 1.5s ease-in-out;
 $LogoATextdecoration:none;
 
-//for lower header
-$LowerHeaderRightMargin:auto;
-$LowerHeaderRightDisplay:flex;
-$LowerHeaderRightJustifycontent:center;
-
-//** for navbar lower header component
-$LowerHeaderNavTransition:all 1s ease-in-out;
-$LowerHeaderNavColor:#121212;
-$LowerHeaderNavFont:600 16px "Roboto Slab",'Lucida Sans Typewriter',serif;
 
 
-//**for right side lower header commponent
-$LowerHeaderRightIconCursor:pointer;
-$LowerHeaderRightModalBKColor:transparent;
-$LowerHeaderRightModalBKBorder:none;
-$LowerHeaderRightModalBKCloseFont:4em;
-$LowerHeaderRightModalBKNone:none;
-$LowerHeaderRightModalBKMargin:0;
-$LowerHeaderRightModalBKBorderRaduis:0;
-$LowerHeaderRightModalBKBoxShadow:inset 0 -1px 0 $WhiteColor;
-$LowerHeaderRightModalBKBorderTop: 1px solid $WhiteColor;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@import './AllVariable/headerVariables'
+       ,'./AllVariable/homeVariable';
 
 
 
@@ -71,7 +37,7 @@ $minHeightBody :551px;
 $backgroundColorBody: rgb(251, 251, 250);
 
 //main font 
-$fonts : "Segoe Script", Arial, Helvetica, sans-serif;
+// $fonts : "Segoe Script", Arial, Helvetica, sans-serif;
 
 // Footer & Upper Header variables
 $textColor : $colorWhite;
